--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <input id="input"/>
         <button id="search" type="submit">Search</button>
     </form>
+    <button id="load-more" type="submit">Load More</button>
     <script src="./app.js"></script>
 
     <div id="results">
